tasksel (1.5) unstable; urgency=high

  * 

 -- Adam Di Carlo <aph@debian.org>  Mon, 28 May 2001 21:07:52 -0400

tasksel (1.4) unstable; urgency=high

  * Modifications to existing tasks by Joey Hess
    - added language-env to all language tasks that it supports
    - added netatalk to file-server and print-server
    - renamed modem to dialup, and added stuff for isdn and pppoe to it.
      Also removed a few things like lynx from the task.
    - added aviword to desktop, so there is a basic word processor in there
    - added gimp to desktop too, it's too handy not to be there
    - added lyx to tex
  * New tasks by Joey Hess:
    - web-server -- currently includes only the bare basics, suggestions
      appreciated.
    - unix-server -- a conventional unix server, fully loaded with most of
      the standard unix daemons and userland for console users.
  * Adam Di Carlo:
    - stop shipping upstream ChangeLog
    - number this like a Debian package
    - set urgency to high to cram this into woody for base freeze
    - update our description

 -- Adam Di Carlo <aph@debian.org>  Mon, 28 May 2001 21:03:47 -0400

tasksel (1.3-2) unstable; urgency=low

  * Modifications to existing tasks:
    - Replaced talk of "this [meta]package" with "this task", and like
      changes.
    - In l10n tasks, s/-speaking// for consistency.
    - Make all l10n tasks include locales. It's in base, so this is of
      dubious utility, but some had it and some not.
    - Changed short descriptions of basic-desktop and desktop in an attempt
      to clarify how they're different.
    - Added some comments here and there for unresolved issues.
    - Largely rewrote Debian Jr. descriptions.
    - Added menu to desktop task.
    - Rejiggered mail-server, to be a general purpose mail server, not just
      imap.
    - Moved samba-server to file-server, and made that include nfs stuff
      too.
    - Added a print-server task, that also includes samba, along with other
      stuff.